    nodes.
  * StarPU-MPI: new function
    starpu_mpi_irecv_detached_sequential_consistency which allows to
    enable or disable the sequential consistency for the given data
    handle (sequential consistency will be enabled or disabled based
    on the value of the function parameter and the value of the
    sequential consistency defined for the given data)

Small features:
  * Add cl_arg_free field to enable automatic free(cl_arg) on task
    destroy.
  * New functions starpu_data_acquire_cb_sequential_consistency() and
    starpu_data_acquire_on_node_cb_sequential_consistency() which allows
    to enable or disable sequential consistency
  * New configure option --enable-fxt-lock which enables additional
    trace events focused on locks behaviour during the execution
  * New function starpu_perfmodel_directory() to print directory
    storing performance models. Available through the new option -d of
    the tool starpu_perfmodel_display

Changes:
  * Fix of the livelock issue discovered while executing applications
    on a CPU+GPU cluster of machines by adding a maximum trylock 
    threshold before a blocking lock.
  * Data interfaces (variable, vector, matrix and block) now define
    pack und unpack functions

StarPU 1.1.0 (svn revision xxxx)
==============================================

New features:
  * OpenGL interoperability support.
  * Capability to store compiled OpenCL kernels on the file system
  * Capability to load compiled OpenCL kernels
  * Performance models measurements can now be provided explicitly by
    applications.
  * Capability to emit communication statistics when running MPI code
  * Add starpu_unregister_submit, starpu_data_acquire_on_node and
    starpu_data_invalidate_submit
  * New functionnality to wrapper starpu_insert_task to pass a array of
	data_handles via the parameter STARPU_DATA_ARRAY
  * Enable GPU-GPU direct transfers.
  * GCC plug-in
	- Add `registered' attribute